# cocktail-compiler

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ui.py
cocktaildb/: __init__.py  cocktaildb.py
data/: __init__.py  cocktails_data.py  config.py  ingredients.csv
gui/: discover_page.py  functions_page.py  ingredients_page.py  main.py  numpad.py
hardware/: bartender.py  pump.py
pages/: functionsPage.py  ingredientsPage.py
storage/: cocktails_complete.csv  cocktails_missing_one.csv  ingredients.csv
